--- a/termux.properties
+++ b/termux.properties
@@ -19,7 +19,6 @@ shortcut.previous-session = ctrl + 1
 # backspace. swipeup toggles fake capslock in insert mode.
 extra-keys = [\
                [ \
-               '', \
 {macro:"ESC CTRL o",display:'<'},\
 {macro:"ESC CTRL i",display:'>'},\
 {macro:"ESC +",popup:{macro:"ESC yypk+"},display:'//'},\
@@ -29,11 +28,9 @@ extra-keys = [\
 {macro:"ESC u",display:'U'},\
 {macro:"ESC CTRL r",display:'R'},\
 {macro:"ESC :w ENTER",popup:{macro:",B"},display:'S'},\
-{key:ESC,display:'X'},\
-               '' \
+{key:ESC,display:'X'}\
                ], \
                [ \
-               '', \
                '?', \
                'QUOTE', \
 {key:HOME,display:'<<'},\
@@ -43,11 +40,9 @@ extra-keys = [\
                'DOWN', \
                'UP', \
                'TAB', \
-{key:CTRL,display:'C'},\
-               '' \
+{key:CTRL,display:'C'}\
                ], \
                [ \
-               '', \
                '(', \
                ')', \
                '{', \
@@ -57,11 +52,9 @@ extra-keys = [\
                ',', \
                ';', \
                '.', \
-               ':', \
-               '' \
+               ':' \
                ], \
                [ \
-               '', \
                '&', \
                '|', \
                '+', \
@@ -71,11 +64,9 @@ extra-keys = [\
                '<', \
                '>', \
                '*', \
-               '/', \
-               '' \
+               '/' \
                ], \
                [ \
-               '', \
                'BACKSLASH', \
                '`', \
                'APOSTROPHE', \
@@ -85,11 +76,9 @@ extra-keys = [\
                '%', \
                '~', \
                '^', \
-               '$', \
-               '' \
+               '$' \
                ], \
                [ \
-               '', \
                '1', \
                '2', \
                '3', \
@@ -99,11 +88,9 @@ extra-keys = [\
                '7', \
                '8', \
                '9', \
-               '0', \
-               '' \
+               '0' \
                ], \
                [ \
-               '', \
                {key:'q',popup:'Q'},\
                {key:'w',popup:'W'},\
                {key:'e',popup:'E'},\
@@ -113,11 +100,9 @@ extra-keys = [\
                {key:'u',popup:'U'},\
                {key:'i',popup:'I'},\
                {key:'o',popup:'O'},\
-               {key:'p',popup:'P'}, \
-               '' \
+               {key:'p',popup:'P'} \
                ], \
                [ \
-               '', \
                {key:'a',popup:'A'},\
                {key:'s',popup:'S'},\
                {key:'d',popup:'D'},\
@@ -127,11 +112,9 @@ extra-keys = [\
                {key:'j',popup:'J'},\
                {key:'k',popup:'K'},\
                {key:'l',popup:'L'},\
-{key:"BKSP",popup:{macro:"CTRL ^"}},\
-               '' \
+{key:"BKSP",popup:{macro:"CTRL ^"}}\
                ], \
                [ \
-               '', \
                {key:'z',popup:'Z'},\
                {key:'x',popup:'X'},\
                {key:'c',popup:'C'},\
@@ -141,8 +124,7 @@ extra-keys = [\
                {key:'m',popup:'M'},\
                {key:'SPACE',display:' '},\
                {key:'SPACE',display:' '},\
-               'ENTER',\
-               '' \
+               'ENTER'\
                ] \
                ]
 
